maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:74: error: ';' expected but 'else' found.
  } else {return 2}
    ^